--- a/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-local.html
@@ -22,11 +22,10 @@
 				
 				<div class="col-12">
 			
-					<label>¿Estas seguro de eliminar tu cuenta y perfil?</label>
-					<a th:href="'/locales/eliminar-perfil/' + ${id_usuario}">Sí, eliminar mi cuenta y perfil</a>
-					<br></br>
-					<a th:href="'/locales/mi-perfil/' +$ {id_usuario}">Volver</a>
-					
+					<label>¿Estas seguro de eliminar tu cuenta y perfil?</label><br></br>
+                    <a th:href="'/locales/confirmacion-eliminar-perfil/' + ${id_usuario}">Sí, eliminar cuenta y perfil.</a>
+                    <br></br>
+                    <a th:href="'/locales/mi-perfil/' + ${id_usuario}">Volver.</a>
 					
 				</div>
 			</div>
