--- a/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-musico.html
@@ -22,10 +22,10 @@
 				
 				<div class="col-12">
 			
-					<label>¿Estas seguro de eliminar tu cuenta y perfil?</label>
-					<a th:href="'/musicos/eliminar-perfil/' + ${id_usuario}">Sí, eliminar mi cuenta y perfil</a>
-					<br></br>
-					<a th:href="'/musicos/mi-perfil/' +$ {id_usuario}">Volver</a>
+					<<label>¿Estas seguro de eliminar tu cuenta y perfil?</label><br></br>
+                    <a th:href="'/musicos/confirmacion-eliminar-perfil/' + ${id_usuario}">Sí, eliminar cuenta y perfil.</a>
+                    <br></br>
+                    <a th:href="'/musicos/mi-perfil/' + ${id_usuario}">Volver.</a>
 					
 					
 				</div>
