--- a/ArmaTuFecha/src/main/resources/templates/vista-perfil-musico-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/vista-perfil-musico-logueado.html
@@ -45,7 +45,7 @@
 					<a th:href= "'/editar-datos-usuario/' + ${id_usuario}">Editar datos de usuario</a>
 					<br></br>
 					<br></br>
-					<a th:href="'/musicos/eliminar-cuenta/' + ${id_usuario}">Eliminar mi cuenta y perfil</a>
+					<a th:href="'/musicos/eliminar-cuenta/' + ${id_usuario}">Eliminar cuenta y perfil.</a>
 				</div>
 			</div>
 		</div>
