--- a/ArmaTuFecha/src/main/resources/templates/vista-perfil-local-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/vista-perfil-local-logueado.html
@@ -12,7 +12,7 @@
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	</head>
 
-	<body>
+	<body class="color-texto2">
 		<div class="container">
 			<div class="row">
 				<header class="col-12">
@@ -41,7 +41,7 @@
 					<a th:href= "'/editar-datos-usuario/' + ${id_usuario}">Editar datos de usuario</a>
 					<br></br>
 					<br></br>
-					<a th:href="'/locales/eliminar-cuenta/' + ${id_usuario}">Eliminar mi cuenta y perfil</a>
+					<a th:href="'/locales/eliminar-cuenta/' + ${id_usuario}">Eliminar cuenta y perfil.</a>
 				</div>
 			</div>
 		</div>
