--- a/ArmaTuFecha/src/main/resources/static/css/estilos.css
+++ b/ArmaTuFecha/src/main/resources/static/css/estilos.css
@@ -1,154 +1,32 @@
- h1 {
- 	color: blue;
- }
- 
-  
- article {
- 	margin: 10px;
- 	padding: 5px;
- }
- 
-.tarjeta-perfilLocal {
-	border-style: solid;
-	border-size: 2px;
-	border-color: #b399ff;
-	height: 500px;
-	width: 1200px;
-	margin: 10px;
-	padding: 10px;
-}
 
-.tarjeta-perfilMusico {
-	border-style: solid;
-	border-size: 2px;
-	border-color: #99ffb3;
-	height: 500px;
-	width: 1200px;
-	margin: 10px;
-	padding: 10px;
-}
-
-
- #lugares-donde-tocar {
-    background-color: #b399ff;
-    color: white;
-    padding: 50px;
-    text-align: center;
-    font-size: 50px;
-    text-decoration: none;
-    display: inline-block;
-    height: 300px;
-    width: 500px;
-    margin: 20px;
-}
- 
- 
- #musicos {
-    background-color: #99ffb3;
-    color: white;
-    padding: 50px;
-    text-align: center;
-    font-size: 50px;
-    text-decoration: none;
-    display: inline-block;
-    height: 300px;
-    width: 500px;
-    margin: 20px;
-}
-
- #crear-perfil {
-    background-color: #ff8080;
-    color: white;
-    padding: 50px;
-    text-align: center;
-    font-size: 50px;
-    text-decoration: none;
-    display: inline-block;
-    height: 300px;
-    width: 500px;
-    margin: 20px;
-}
- 
- 
-header {
-	background-color: #809fff;
-	height: 140px;
-	text-align: center;
-	margin: 5px;
-}
-
-h1 {
-	color: white;
-	padding-top: 40px;
-	padding-bottom: 40px;
-}
-
-h3 {
-	font-size:35px;
+#bootstrap-override-col1 {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin: 20px;
+	margin-top: 30px;
 	
 }
 
-.bg-1 { 
-      background-color: #1abc9c; /* Green */
-      color: #ffffff; 
- }
- 
-.extra-height {
- 	height: 555px;
- }
- 
-.textarea-height {
-	height: 150px !important;
+#bootstrap-override-col2 {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin: 20px;
+	margin-top: 30px;
+	
 }
 
-#menos-padding-top {
-    padding-top: 0px !important;
-
+#btn1 {
+	display: block;
+	padding: 32px 14px;
+	font-size: 20px; 
 }
 
-.bg-2 { 
-     background-color: #474e5d; /* Dark Blue */
-     color: #ffffff;
+#btn2 {
+	display: block;
+	padding: 32px 14px;
+	font-size: 20px;
 }
 
-.extra-padding-top {
-	padding-top: 140px !important;
-}
-
-.no-margin-top {
-	margin-top: 0px;
-}
-  
-.container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
-}
-.navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 15px;
-    letter-spacing: 3px;
-}
-
-.margin {margin-bottom: 45px;}
-.navbar-nav li a:hover {
-    color: #1abc9c !important;
-}
-body {
-    font: 20px "Nunito", sans-serif;
-    line-height: 1;
-    color: #f5f6f7;
-}
-
-}
-.form-control {
-	 min-width: 0;
-    width: 25px !important;
-}
-
-.color-texto2 {
-	color: #808080 !important;
+#color1 {
+	background-color: #117a8b !important;
 }
