--- a/ArmaTuFecha/src/main/resources/templates/login.html
+++ b/ArmaTuFecha/src/main/resources/templates/login.html
@@ -1,21 +1,88 @@
-<!doctype html>
-<html>
-	<head>
-		<title>Login</title>
-		<meta charset="UTF-8"></meta>
-	
-	</head>
-	
-	<body>
-		<h1>Login</h1>
-		
-		<form action="/procesar-login" method="POST">
-			<input type="text" name="mail"></input>
-			<input type="password" name="contrasenia"></input>
-			<input type="submit" value="Iniciar Sesión"></input>
-		
-		</form>
-	
-	</body>
+<!DOCTYPE html>
+<html lang="es">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Login</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+  </head>
+
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Arma Tu Fecha</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/login">Log in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="bg-primary text-white" id="color1">
+      <div class="container text-center">    
+        <div class="row">
+        	<div class="col-12">
+        		<h1>Login</h1>
+        	</div>
+        </div>
+        <form class="form-group" action="/procesar-login" method="POST">
+			<div class="col-lg-6 mx-auto text-center form-group" id="bootstrap-override-col1">
+				<label>Mail:</label>
+				<input class="form-control" type="text" name="mail"></input>
+			</div>                
+	    	<div class="col-lg-6 mx-auto text-center form-group" id="bootstrap-override-col2">
+	    		<label>Contraseña:</label>
+	    		<input class="form-control" type="password" name="contrasenia"></input>
+	    	</div> 
+	 		<div>
+	 			<input class="btn btn-outline-light" type="submit" value="Iniciar Sesión"></input>
+	 		</div>
+ 	  	</form>  
+ 	  </div>	   
+    </header>
+
+    
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom JavaScript for this theme -->
+    <script src="js/scrolling-nav.js"></script>
+
+  </body>
 
 </html>
