--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
@@ -1,65 +1,102 @@
-<!doctype html>
-<html>
-	<head>
-    	<title>Arma Tu Fecha</title>
-	  		<meta charset="UTF-8">
-	  		<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-	  		
-	  		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
-			<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-	  		
-	  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	  		
-	  		<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"></link>
+<!DOCTYPE html>
+<html lang="es">
 
-	</head>
+  <head>
 
-		<body>
-			<nav class="navbar navbar-default">
-			  <div class="container">
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span> 
-			      </button>
-			      <a class="navbar-brand" href="/arma-tu-fecha">Arma Tu Fecha</a>
-			    </div>
-			    <div class="collapse navbar-collapse" id="myNavbar">
-			      <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#">FAQ</a></li>
-			        <li><a href="/login">Log in</a></li>
-			      </ul>
-			    </div>
-			  </div>
-			</nav>
-			<div class="container-fluid bg-1 text-center extra-padding-top extra-height">
-			     <h3>Bienvenidx a Arma Tu Fecha!</h3>
-			     <h3 class="margin">¿Qué estas buscando?</h3>
-			     <a href="/listado-locales" class="btn btn-default btn-lg">Lugares donde no cobren<br>para tocar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			     <a href="/listado-musicos" class="btn btn-default btn-lg">Bandas/musicos solistas/etc.<br>para armar fechas</a>			
-			</div>
-			  	
-			<div class="container-fluid col-12 bg-2 text-center extra-padding-top">
-			    	<h3 class="margin">¿Qué es Arma Tu Fecha?</h3>
-			  		<p>Es un proyecto autogestivo que surge ante la problématica que tienen lxs músicxs independientes <br></br>
-			        de no encontrar lugares para tocar donde haya condiciones mínimas de sonido e instalaciones y no les cobren para tocar, <br></br>
-			        ya sea porque explícitamente les exijan un monto para tocar en el lugar o que les pidan rendir a través de la venta<br></br>
-			        de entradas una determinada suma de dinero lo cual es excluyente para que se realize el evento y que en muchos casos <br></br>
-			        luego además les pidan un %50 de la venta del resto de entradas.<br></br>
-			        Creemos que lxs músicos debemos dejar de alimentar este negocio y por eso en esta página se van a difundir aquellos lugares <br></br>
-			        que den un trato digno a lxs artistas. <br></br>
-			        También podes crear un perfil para tu banda para que te encuentren en el listado otrxs músicxs u organizadores.<br></br>
-			        </p>
-			        <a href="/registro" class="btn btn-default btn-lg">Crear un perfil</a>
-			    
-			</div>
-			
-		</body>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+    <title>Arma Tu Fecha</title>
 
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+  </head>
+
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Arma Tu Fecha</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/login">Log in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="bg-primary text-white" id="color1">
+      <div class="container text-center">    
+        <div class="row">
+        	<div class="col-12">
+        		<h1>Bienvenid@ a Arma Tu Fecha<br>¿Qué estas buscando?</h1>
+        	</div>
+        </div>
+        <div class="row">
+			<div class="col-lg-6 mx-auto text-center" id="bootstrap-override-col1">
+				<a href="/listado-locales" id="btn1" class="btn btn-outline-light">Lugares donde no cobren<br>para tocar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</div>                
+	    	<div class="col-lg-6 mx-auto text-center" id="bootstrap-override-col2">
+	    		<a href="/listado-musicos" id="btn2" class="btn btn-outline-light">Bandas/musicos solistas/etc.<br>para armar fechas</a>			
+	    	</div> 
+ 		</div>		
+ 	  </div>     
+    </header>
+
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>¿Qué es Arma Tu Fecha?</h2>
+            <p class="lead">Es un proyecto autogestivo que surge ante la problématica que tienen lxs músicxs independientes de no encontrar lugares para tocar donde haya condiciones mínimas de sonido e instalaciones y no les cobren para tocar, 
+            				ya sea porque explícitamente les exijan un monto para tocar en el lugar o que les pidan rendir a través de la venta de entradas una determinada suma de dinero (lo cual es excluyente para que se realize el evento) y que en muchos casos 
+							luego además les pidan un %50 de la venta del resto de entradas.
+							<br>
+							Creemos que lxs músicos debemos dejar de alimentar este negocio y por eso en esta página se van a difundir aquellos lugares que den un trato digno a lxs artistas. 
+							<br>
+							También podes crear un perfil para tu banda para que te encuentren en el listado otrxs músicxs u organizadores.
+		    </p>
+			<a href="/registro" class="btn btn-outline-dark">Crear un perfil</a>          
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom JavaScript for this theme -->
+    <script src="js/scrolling-nav.js"></script>
+
+  </body>
 
 </html>
