--- a/ArmaTuFecha/src/main/resources/templates/login.html
+++ b/ArmaTuFecha/src/main/resources/templates/login.html
@@ -3,18 +3,17 @@
 
   <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
+   
 
     <title>Login</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
 
     <!-- Custom styles for this template -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="css/scrolling-nav.css" rel="stylesheet"></link>
     <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
   </head>
 
@@ -49,11 +48,11 @@
         </div>
         <form class="form-group" action="/procesar-login" method="POST">
 			<div class="col-lg-6 mx-auto text-center form-group" id="bootstrap-override-col1">
-				<label>Mail:</label>
+				<label id="label1">Mail:</label>
 				<input class="form-control" type="text" name="mail"></input>
 			</div>                
 	    	<div class="col-lg-6 mx-auto text-center form-group" id="bootstrap-override-col2">
-	    		<label>Contraseña:</label>
+	    		<label id="label2">Contraseña:</label>
 	    		<input class="form-control" type="password" name="contrasenia"></input>
 	    	</div> 
 	 		<div>
