--- a/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-local.html
@@ -25,7 +25,7 @@
 					<label>¿Estas seguro de eliminar tu cuenta y perfil?</label><br></br>
                     <a th:href="'/locales/confirmacion-eliminar-perfil/' + ${id_usuario}">Sí, eliminar cuenta y perfil.</a>
                     <br></br>
-                    <a th:href="'/locales/mi-perfil/' + ${id_usuario}">Volver.</a>
+                    <a th:href="'/locales/' + ${nombre}">Volver.</a>
 					
 				</div>
 			</div>
