--- a/ArmaTuFecha/src/main/resources/templates/vista-perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/vista-perfil-local.html
@@ -27,9 +27,9 @@
 					<label>Mail para contactarse:&nbsp; </label><label th:text="${mail_contacto}"></label><br></br>
 					<label>Descripción:&nbsp; </label><label th:text="${descripcion}"></label><br></br>
 					<label>Redes Sociales:&nbsp; </label><br></br>
-					<a th:href="${red_social1}">Facebook</a><br></br>
-					<a th:href="${red_social2}">Instagram</a><br></br>
-					<a th:href="${red_social3}">Otro</a><br></br>
+					<a th:href="${red_social1}" th:if="${red_social1}">Facebook</a><br></br>
+					<a th:href="${red_social2}" th:if="${red_social2}">Instagram</a><br></br>
+					<a th:href="${red_social3}" th:if="${red_social3}">Otro</a><br></br>
 				
 					
 				</div>
