arreglo rutas para editar perfil, editar usuario uso de referer para mostrar mensaje ruta para eliminar usuario, falta hacer que funcione link Volver

--- a/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
+++ b/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
@@ -99,7 +99,7 @@
 							<form  class="form-group" action="/procesar-perfil/local" method="POST">
 							
 								<h3 class="no-margin-top">Completa los datos para tu perfil</h3>
-								<input class="mail" type="hidden" name="mail_usuario"></input>
+								<input class="mail" type="hidden" name="mail"></input>
 								<input class="contrasenia" type="hidden" name="contrasenia"></input>
 								<input class="contrasenia2" type="hidden" name="contrasenia2"></input>
 								
@@ -138,7 +138,7 @@
 							<form class="form-group" action="/procesar-perfil/musico" method="POST">
 							
 							<h3 class="no-margin-top">Completa los datos para tu perfil</h3>
-							<input class="mail" type="hidden" name="mail_usuario"></input>
+							<input class="mail" type="hidden" name="mail"></input>
 							<input class="contrasenia" type="hidden" name="contrasenia"></input>
 							<input class="contrasenia2" type="hidden" name="contrasenia2"></input>
 							
