--- a/ArmaTuFecha/src/main/resources/templates/editar-datos-usuario.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-datos-usuario.html
@@ -61,15 +61,19 @@
 					<div class="row">
 						<div class="col-12">
 							<form  class="form-group" th:action="'/procesar-edicion-usuario/' + ${id}" method="POST" >			   
-								<label>*Editar e-mail:&nbsp;</label><input class="form-control" name="mail_usuario" type="email" th:value="${mail}"></input>
+								<div class="alert alert-danger" role="alert" th:text="${aviso_mail}" th:if="${aviso_mail}">
+								</div>
+								<label>*Editar e-mail:&nbsp;</label><input class="form-control" name="mail" type="email" th:value="${mailCargado}"></input>
 								<br></br>
+								<div class="alert alert-danger" role="alert" th:text="${aviso_contrasenia}" th:if="${aviso_contrasenia}">
+								</div>	
 								<label>*Editar contraseña:&nbsp;</label><input class="form-control" name="contrasenia" type="password" th:value="${contrasenia}"></input>
 								<br></br>
-								<label>*Volvé a ingresar la contraseña:&nbsp;</label>
-								<br>
-								<input class="form-control" name="contrasenia2" type="password" placeholder="contraseña..."></input> <br></br>
+								<label>*Volvé a ingresar la contraseña:&nbsp;</label><input class="form-control" name="contrasenia2" type="password" placeholder="repetir contraseña..."></input>
+								<br></br>
 								
 								<input class="btn btn-default" type="submit" value="Guardar cambios"></input>
+								<!-- TO DO boton volver, usar referer -->
 								<br></br>
 								<br></br>
 							</form>			
