--- a/ArmaTuFecha/src/main/resources/templates/login.html
+++ b/ArmaTuFecha/src/main/resources/templates/login.html
@@ -43,7 +43,8 @@
       <div class="container text-center">    
         <div class="row">
         	<div class="col-12">
-        		<h1>Login</h1>
+        		<h1 th:text="${mensaje_bienvenida}"></h1>
+        		<h1>Log in</h1>
         	</div>
         </div>
         <form class="form-group" action="/procesar-login" method="POST">
